[gd_scene load_steps=11 format=2]

[ext_resource path="res://free-assets/fonts/Balsamiq/BalsamiqSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/EasterEgg2.gd" type="Script" id=2]
[ext_resource path="res://nc-assets/images/easter_egg.png" type="Texture" id=3]
[ext_resource path="res://scripts/EasterEgg2Control.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 28
extra_spacing_top = -2
extra_spacing_bottom = -4
font_data = ExtResource( 1 )

[node name="EasterEgg2" type="Button"]
pause_mode = 2
margin_left = 739.0
margin_top = 27.0
margin_right = 1239.0
margin_bottom = 361.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = -739.0
margin_top = -27.0
margin_right = 1181.0
margin_bottom = 1053.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 1
color = Color( 0, 0, 0, 0.54902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Square" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 634.0
margin_top = 10.0
margin_right = -576.0
margin_bottom = -330.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlAnimation" type="Control" parent="Control/Square"]
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="Control/Square/ControlAnimation"]
margin_right = 710.0
margin_bottom = 740.0
mouse_filter = 1
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FG" type="ColorRect" parent="Control/Square/ControlAnimation"]
margin_left = 10.0
margin_top = 10.0
margin_right = 700.0
margin_bottom = 730.0
mouse_filter = 1
color = Color( 0.666667, 0.380392, 0.658824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Control/Square/ControlAnimation"]
margin_top = 450.0
margin_right = 710.0
margin_bottom = 740.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test label"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 989, 250 )
scale = Vector2( 0.48, 0.44 )
texture = ExtResource( 3 )
[connection signal="pressed" from="." to="." method="_on_EasterEgg2_pressed"]
